--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Welcome So You Have Found My Site This Is Only For Me To Mske Image Links As I Hate Having To Copy And Paste
+<!DOCTYPE html>
+<html>
+<head>
+</head>
+  <meta http-equiv="refresh" content="5;URL=https://www.youtube.com/watch?v=iik25wqIuFo" />
+    </body>
+</html>
+Welcome So You Have Found My Site This Is Only For Me To Make Image Links As I Hate Having To Do Something A Lot So This Is Easier
