--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 </head>
-  <meta http-equiv="refresh" content="0;URL=https://www.youtube.com/watch?v=iik25wqIuFo" />
+  <meta http-equiv="refresh" content="0;URL=https://youtu.be/dQw4w9WgXcQ" />
     </body>
 </html>
 Welcome So You Have Found My Site This Is Only For Me To Make Image Links As I Hate Having To Do Something A Lot So This Is Easier
